--- a/applications/admin-console/src/main/resources/com/elasticgrid/admin/public/Admin.html
+++ b/applications/admin-console/src/main/resources/com/elasticgrid/admin/public/Admin.html
@@ -23,7 +23,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Elastic Grid Support</title>
+    <title>Elastic Grid Administration Console</title>
     <link rel="stylesheet" type="text/css" href="Admin.css"/>
     <link rel="stylesheet" type="text/css" href="../gxt/css/gxt-all.css"/>
     <script language='javascript' src='../gxt/flash/swfobject.js'></script>
